# nucleo-template

./: .dockermake  .generic.mk  .gitignore  .mbed.mk  .memory  .nucleo.mk  .targets.mk  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  README.txt  clone  generic.mk  makefile  size_info  targets.cmake  update
.mk/: commands.mk  env.mk  mbed.mk  size.mk  targets.mk  vars.mk
inc/: .readme  stm32f401re_flash.ld
lib/: .readme
mbed/: .hg_archival.txt  mbed.h  mbed_config.h
mbed/ST_401_84MHZ/ST_401_84MHZ-b9343c8b85ec/: .hg_archival.txt
mbed/TARGET_NUCLEO_F303K8/TARGET_STM/TARGET_STM32F3/: can_device.h  common_objects.h  i2c_device.h
mbed/TARGET_NUCLEO_F303K8/TARGET_STM/TARGET_STM32F3/TARGET_NUCLEO_F303K8/device/: cmsis_nvic.h  hal_tick.h  stm32f303x8.h  stm32f3xx.h  system_stm32f3xx.h
mbed/TARGET_NUCLEO_F303K8/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/TARGET_NUCLEO_F303K8/: PeripheralNames.h  PinNames.h
mbed/TARGET_NUCLEO_F303K8/TARGET_STM/TARGET_STM32F3/device/: stm32f3xx_hal_comp_ex.h  stm32f3xx_hal_def.h  stm32f3xx_hal_pcd.h
mbed/TARGET_NUCLEO_F401CD/TARGET_STM/TARGET_STM32F4/TARGET_NUCLEO_F401CD/device/: stm32f4xx.h
mbed/TARGET_NUCLEO_F401CD/TOOLCHAIN_GCC_ARM/: STM32F401XD.ld
mbed/TARGET_NUCLEO_F401RE/TARGET_STM/TARGET_STM32F4/TARGET_NUCLEO_F401RE/device/: stm32f401xe.h
mbed/TARGET_NUCLEO_F746ZG/TARGET_STM/TARGET_STM32F7/: can_device.h  common_objects.h  i2c_device.h
mbed/TARGET_NUCLEO_F746ZG/TARGET_STM/TARGET_STM32F7/TARGET_F746_F756/: PinNames.h  PortNames.h  objects.h
mbed/TARGET_NUCLEO_F746ZG/TARGET_STM/TARGET_STM32F7/TARGET_F746_F756/TARGET_NUCLEO_F746ZG/device/: stm32f7xx.h
mbed/TARGET_NUCLEO_F746ZG/TARGET_STM/TARGET_STM32F7/TARGET_F746_F756/device/: cmsis_nvic.h  hal_tick.h  system_stm32f7xx.h
mbed/TARGET_NUCLEO_F746ZG/TARGET_STM/TARGET_STM32F7/TARGET_STM32F746xG/TARGET_NUCLEO_F746ZG/: PeripheralNames.h  PinNames.h
mbed/TARGET_NUCLEO_F746ZG/TARGET_STM/TARGET_STM32F7/TARGET_STM32F746xG/device/: stm32f7xx.h  system_stm32f7xx.h
mbed/TARGET_NUCLEO_F746ZG/TARGET_STM/TARGET_STM32F7/device/: stm32f7xx_hal_conf.h  stm32f7xx_hal_def.h  stm32f7xx_hal_mmc.h  stm32f7xx_hal_pcd.h  stm32f7xx_hal_smbus.h  stm32f7xx_ll_adc.h  stm32f7xx_ll_bus.h  stm32f7xx_ll_cortex.h  stm32f7xx_ll_crc.h  stm32f7xx_ll_dac.h  stm32f7xx_ll_dma.h  stm32f7xx_ll_dma2d.h  stm32f7xx_ll_exti.h  stm32f7xx_ll_gpio.h  stm32f7xx_ll_i2c.h  stm32f7xx_ll_iwdg.h  stm32f7xx_ll_lptim.h  stm32f7xx_ll_pwr.h  stm32f7xx_ll_rcc.h  stm32f7xx_ll_rng.h  stm32f7xx_ll_rtc.h  stm32f7xx_ll_spi.h  stm32f7xx_ll_system.h  stm32f7xx_ll_tim.h  stm32f7xx_ll_usart.h  stm32f7xx_ll_utils.h  stm32f7xx_ll_wwdg.h
mbed/TARGET_NUCLEO_F746ZG/TOOLCHAIN_GCC_ARM/: STM32F746xG.ld
mbed/TARGET_NUCLEO_L432KC/TARGET_STM/TARGET_STM32L4/TARGET_STM32L432xC/TARGET_NUCLEO_L432KC/: PinNames.h
mbed/TARGET_NUCLEO_L432KC/TARGET_STM/TARGET_STM32L4/device/: stm32l4xx_ll_adc.h
mbed/TARGET_NUCLEO_L432KC/TOOLCHAIN_GCC_ARM/: STM32L432XX.ld
mbed/api/: QEI.h  mbed.h
mbed/common/: Serial.cpp
mbed/hal/: qei_api.h
mbed/minimu-9v2/L3GD20/: L3GD20.cpp  L3GD20.h
mbed/minimu-9v2/LSM303DLHC/: LSM303DLHC.cpp  LSM303DLHC.h
mbed/platform/: FileHandle.h  mbed_debug.h
mbed/targets/hal/TARGET_STM/TARGET_NUCLEO_F401RE/: PeripheralNames.h  device.h  objects.h  qei_api.c  serial_api.c
src/: main.cpp  startup_stm32f4xx.S
tools/: clone  dmake  full-update  gdb-client  gdbinit  gen-jlink  nucleo-gdb  openocd.cfg  update
